autotests/syntax-tests/tests/negative/negative109.sref
Name { Name Name ( Name ) [ Name ( ) ] e.Var 